# charuco

./: Pipfile  README.md  batch_eval.ipynb  batch_evaluation.ipynb  charuco.py  charuco_coverage.ipynb  pyproject.toml
augmentation/: README.md  albumentations-transforms.ipynb
data/results/: result.txt
