[tool.poetry]
name = "charuco"
version = "0.1.0"
description = "Calibration optimization"
authors = ["tlalarus <iamsimmk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0"
matplotlib = "^3.9.0"
numpy = "^1.26.0"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
